# robocup_catkin_ws_2024

./: .gitignore  README.md  깃헙토큰.txt
devel/: .catkin  local_setup.sh  setup.sh
devel/include/msg_generate/: HSV.h  L_LC_msg.h  Landing_Time_Control.h  Local_Info.h  Local_msg.h  Motion_msg.h  Motor_msg.h  Motor_msg_pt.h  Mt2Serial_msg.h  R_LC_msg.h  Running_2020_vision.h  Serial2LC_msg.h  Step_msg.h  angle2.h  com_msg.h  (+55 more)
src/: robot_config.h
src/Assemble_description/: CMakeLists.txt  package.xml
src/best_supporting_spot/: CMakeLists.txt  mainpage.dox
src/c_robocup_localization23/: CMakeLists.txt  README.md  package.xml
src/c_robocup_vision23_yolov4/: CMakeLists.txt  README.md
src/ebimu_test/: CMakeLists.txt  mainpage.dox  package.xml
src/ebimu_v5/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  ebimu_v5.cbp
src/gamecontroller/: CMakeLists.txt  ROBOCUP_RULE  package.xml
src/ik_walk/: CMakeLists.txt  CMakeLists.txt.user.1f3a142.4.8-pre1  CMakeLists.txt.user.21  CMakeLists.txt.user.4.8-pre1  CMakeLists.txt.user.56e38d2.4.8-pre1  CMakeLists.txt.user.64ee721  CMakeLists.txt.user.c41ada7
src/ik_walk/include/ik_walk/: ik_walk.hpp  imu_position_control.hpp  solve_kinematics.hpp  walk_pattern.hpp  zmp_position_control.hpp
src/ik_walk/init/: AP_Winit.h  AP_Winit6.h  IRCwInit.h  R1_init_w.h  R3_init_w.h  W_Init0807.h  cup_w_R1.h  cup_w_R2.h  cup_w_R3.h  cup_w_R5.h  cup_winit.h  new_init_w.h  wkinit1.h
src/ik_walk/src/: ik_walk.cpp  imu_position_control.cpp  pid_control_float.cpp  solve_kinematics.cpp  walk_pattern.cpp  zmp_position_control.cpp
src/load_cell/: CMakeLists.txt  mainpage.dox
src/motion/: CMakeLists.txt  mainpage.dox
src/motion_operator/: CMakeLists.txt
src/msg_generate/: CMakeLists.txt
src/ocam/: CMakeLists.txt
src/ocam/launch/: ocam_ros.launch
src/ocam/src/: oCam.cpp
src/robocup_localization24/: CMakeLists.txt
src/robocup_localization24_obstacle/: CMakeLists.txt  README.md  mainpage.dox  package.xml
src/robocup_master23/: CMakeLists.txt
src/robocup_master24/: CMakeLists.txt  package.xml
src/robocup_vision24_obstacle/: CMakeLists.txt  README.md  mainpage.dox
src/robocup_vision24_yolov4/: CMakeLists.txt  package.xml
src/serial_mcu/: CMakeLists.txt  CMakeLists.txt.user.21  CMakeLists.txt.user.4.8-pre1  CMakeLists.txt.user.56e38d2.21  CMakeLists.txt.user.b7fa504.4.8-pre1  CMakeLists.txt.user.d32a7b9  CTestTestfile.cmake  Makefile  cmake_install.cmake  serial_mcu.cbp
src/tune_walk/: CMakeLists.txt  CMakeLists.txt.user.1f3a142  CMakeLists.txt.user.21  CMakeLists.txt.user.4.8-pre1  CMakeLists.txt.user.56e38d2  CMakeLists.txt.user.c41ada7  CTestTestfile.cmake  Makefile  cmake_install.cmake  mainpage.dox  tune_walk.cbp
src/udpcom/: CMakeLists.txt  package.xml
src/udpcom_Helper/: CMakeLists.txt  mainpage.dox  package.xml
src/udpcom_Kicker/: CMakeLists.txt  mainpage.dox
(+812 files in other folders)
